--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "openai-php/laravel": "^0.16.0"
+        "openai-php/laravel": "^0.16.0",
+        "phpoffice/phpword": "^1.4",
+        "smalot/pdfparser": "^2.12",
+        "spatie/pdf-to-text": "^1.54"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
