--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "blade-ui-kit/blade-heroicons": "^2.6",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "openai-php/laravel": "^0.16.0",
         "phpoffice/phpword": "^1.4",
         "smalot/pdfparser": "^2.12",
